tests/istio_testcases/example_policies/complex-ingress-test/resources/bbbb-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-bbbb
  namespace: example
  labels:
    app: bbbb
spec:
  type: ClusterIP
  ports:
  - name: serviceport
    port: 80
    protocol: TCP
    targetPort: 3456
  selector:
    app: bbbb
