tests/istio_testcases/example_policies/complex-ingress-test/resources/cccc-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-cccc
  namespace: example
spec:
  selector:
    matchLabels:
      app: cccc
  replicas: 2
  template:
    metadata:
      labels:
        app: cccc
