tests/istio_testcases/example_policies/complex-ingress-test/resources/eeee-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-eeee
  namespace: example
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eeee
  template:
    metadata:
      labels:
        app: eeee
