tests/istio_testcases/example_policies/complex-ingress-test/resources/iiii-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-iiii
  namespace: example
  labels:
    app: iiii
spec:
  type: ClusterIP
  ports:
  - name: serviceport
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: iiii
