tests/istio_testcases/example_policies/complex-ingress-test/resources/jjjj-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-jjjj
  namespace: example
  labels:
    app: jjjj
spec:
  type: ClusterIP
  ports:
  - name: serviceport
    port: 80
    protocol: TCP
    targetPort: 9950
  selector:
    app: jjjj
